--- a/exercícios/ex025/form002.html
+++ b/exercícios/ex025/form002.html
@@ -10,11 +10,11 @@
     <form action="cadastro.php">
         <p>
             <label for="iusu">Usuário:</label>
-            <input type="text" name="usuario" id="iusu" required>
+            <input type="text" name="usuario" id="iusu" required minlength="5" maxlength="15" placeholder="Usuário">
         </p>
         <p>
             <label for="isen">Senha:</label>
-            <input type="password" name="senha" id="isen" required>
+            <input type="password" name="senha" id="isen" required minlength="8" maxlength="15" placeholder="Senha">
         </p>
         <p>
             <input type="submit" value="Enviar">
