--- a/exercícios/ex026/mq004/index.html
+++ b/exercícios/ex026/mq004/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Testando Medias Querys</h1>
+        <h1>Testando Medias Queries</h1>
         <img id="pc" src="imagens/icon-pc.png" alt="Versão Pc">
         <img id="phone" src="imagens/icon-phone.png" alt="Versão Celular">
         <img id="print" src="imagens/icon-print.png" alt="Versão Impressora">
