--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -6,8 +6,9 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()" >
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
@@ -35,6 +36,15 @@
         <p>Desenvolvido por &copy;MikeAlone</p>
     </footer> 
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                lista.style.display = 'block'
+            } else {
+                lista.style.display = 'none'
+            }
+        }
+
+
         function clickMenu() {
             if(lista.style.display == 'block') {
                 lista.style.display = 'none'
